--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "moment": "^2.24.0",
     "vue": "^2.5.2",
     "vue-chat-scroll": "^1.3.5",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
